<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tel.call.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/text_sel_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:inputType="date" >
        </EditText>

        <Button
            android:id="@+id/btn_sync"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_main_btn_sync" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_tab_cell_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#B8B8B8"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_main_tab_cell_2"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#B8B8B8"
                android:visibility="visible" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fragment_main_tab_cell_3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#B8B8B8"
                android:visibility="visible" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fragment_main_tab_cell_4"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/grid_items"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

</LinearLayout>